Support for most of supported generic query operations, added tests